welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: not found: value int
int nbPas=0
^Variables:2: error: not found: value int
int dejaFait=0
^Variables:5: error: not found: value nbPas
  nbPas=nbPas +1
  ^Variables:8: error: not found: value dejaFait
while(dejaFait!=nbPas){
      ^Variables:8: error: not found: value nbPas
while(dejaFait!=nbPas){
                ^Variables:10: error: not found: value dejaFait
  dejaFait=dejaFait+1
  ^