welcome.lessons.welcome.variables.Variables.scala.code
int nbPas=0
int dejaFait=0
while(!estSurBiscuit()){
  avance()
  nbPas=nbPas +1
}
prendBiscuit()
while(dejaFait!=nbPas){
  recule()
  dejaFait=dejaFait+1
}
poseBiscuit()

